_sass/_layout.scss
/**
 * Site level
 */
.site {
    display: flex;
    flex-direction: column;
    height: 100%;
}
.site-content {
    flex: 1 0 auto;
    padding: var(--space) var(--space) 0;
    width: 100%;
}
.site-title {
    &, &:visited {
        color: $title-text-color;
    }
}

/**
 * Page level
 */
.page-content {
    padding: $spacing-unit / 4;
}

/**
 * Post level
 */
.post-card-title > .mdl-card__title {
    color: #fff;
    height: 156px;
}
.post-card {
    display: flex;
    flex-flow: column;
}
.post-card-expandable {
    flex: 2;
}
.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}
.post-link {
    display: block;
    font-size: 24px;
}
.post-header {
    margin-bottom: $spacing-unit;
}
.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}
.post-subtitle {
    font-size: 24px;
    letter-spacing: -1px;
    line-height: 1;
}
.post-content {
    table {
        margin: 10px 0 15px 0;
        border-collapse: collapse;
    }
    td, th {
        border: 1px solid $border-color;
        padding: 3px 10px;
    }
    th {
        padding: 5px 10px;
    }
    p {
        margin-bottom: 9px;
    }
    h1, h2, h3, h4, h5, h6 {
        color: #404040;
        line-height: 36px;
    }
    h1 {
        margin-bottom: 18px;
        font-size: 30px;
    }
    h2 {
        font-size: 30px;
    }
    h3 {
        font-size: 24px;
    }
    h4 {
        font-size: 22px;
    }
    h5 {
        font-size: 16px;
    }
    h6 {
        font-size: 14px;
    }
    hr {
        margin: 0 0 19px;
        border: 0;
        border-bottom: 1px solid $border-color-bottom;
    }
    blockquote {
        padding: 13px 13px 21px 15px;
        margin-bottom: 18px;
        font-family: $quote-font-family;
        font-style: italic;
    }
    blockquote:before {
        content: "\201C";
        font-size: 40px;
        margin-left: -10px;
        font-family: $quote-font-family;
        color: $blockquote-color;
    }
    blockquote p {
        font-size: 14px;
        font-weight: 300;
        line-height: 18px;
        margin-bottom: 0;
        font-style: italic;
    }
    code, pre {
        font-family: $code-font-family;
    }
    code {
        background-color: $grey-color-light;
        color: rgba(0, 0, 0, 0.75);
        padding: 1px 3px;
        font-size: 12px;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        border-radius: 3px;
    }
    pre {
        display: block;
        padding: 14px;
        margin: 0 0 18px;
        line-height: 16px;
        font-size: 11px;
        border: 1px solid $border-color;
        white-space: pre-wrap;
        word-wrap: break-word;
    }
    pre code {
        background-color: $background-color;
        color: $text-color-code;
        font-size: 11px;
        padding: 0;
    }
    sup {
        font-size: 0.83em;
        vertical-align: super;
        line-height: 0;
    }
    * {
        -webkit-print-color-adjust: exact;
    }
    @media screen and (min-width:914px) {
        body {
            width: 854px;
            margin: 10px auto;
        }
    }
    @media print {
        body, code, pre code, h1, h2, h3, h4, h5, h6 {
            color: black;
        }
        table, pre {
            page-break-inside: avoid;
        }
    }
}

/**
 * Drawer
 */
.mdl-layout-subtitle {
    line-height: 24px;
    border-top: 1px solid $grey-color-light;
    padding-left: 40px;
    padding-top: 16px;
    // Counter-balance navigation top padding
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
    font-size: 20px;
    line-height: 1;
    letter-spacing: .02em;
    font-weight: 400;
}
@media screen and (max-width:1024px) {
    .mdl-layout-subtitle {
        padding-left: 16px
    }
}

/**
 * Other
 */
.rss-subscribe {
    padding-left: 8px;
    margin-left: 8px;
}

